docs: optimize index.html with SEO meta tags and performance preconnects

--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pixel.io – Digital Agency</title>
+
+    <!-- SEO & Meta Information -->
+    <title>Pixel.io | Creative Digital Agency</title>
+    <meta
+      name="description"
+      content="Pixel.io is a creative digital agency specializing in high-impact digital experiences, thoughtful design, and scalable development for modern startups."
+    />
+    <meta
+      name="keywords"
+      content="digital agency, web design, web development, react, creative studio, pixel io, startup growth"
+    />
+    <meta name="author" content="Pixel.io" />
+    <meta name="theme-color" content="#030712" />
+
+    <!-- Performance: Preconnect to Font Source -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Typography: 'Outfit' Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body
+    class="bg-gray-950 text-white antialiased selection:bg-indigo-500/30 selection:text-indigo-200"
+  >
     <div id="root"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
